--- a/index.html
+++ b/index.html
@@ -346,6 +346,29 @@
         font-size: 0.85rem;
       }
     }
+.video-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* relación 16:9 */
+  height: 0;
+  overflow: hidden;
+  border-radius: 18px;
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  box-shadow: 0 18px 45px rgba(0, 0, 0, 0.45);
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.video-container iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 
     /* -------------------------------- JUEGO ROMÁNTICO -------------------------------- */
 
@@ -710,9 +733,21 @@
       <div class="romantic-chip">JUEGO MATEMATICO</div>
   </section>
 
-    <section id="juego-matematico" class="section-romantic">
-      <div class="romantic-chip">VIDEO</div>
-  </section>
+ <section id="video" class="section-romantic">
+  <div class="romantic-chip">VIDEO ESPECIAL</div>
+
+  <div class="video-wrapper">
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/tgbNymZ7vqY"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</section>
+
 
 <audio id="correct-sound" preload="auto"
   src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_b49216209e.mp3?filename=correct-2-46134.mp3">
